Enable java 16 preview features
Specifically, I want sealed classes.